Rewrote main javascript for app

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 	<div class="main-wrap">
 		<div class="button-wrap">
 			<button id="note-button">New Note</button>
-			<button id="list-button">New List</button>
 		</div>
 		
-		<div id="card-wrap" class="card-wrap"></div>
+		<div id="card-wrap" class="card-wrap">
+			
+			
+
+		</div>
 	</div>
 
 
