--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 	<title>Keep Look-alike App</title>
+
+	<link
+      rel="stylesheet"
+      href="https://unpkg.com/primitive-ui/dist/css/main.css"
+    />
 </head>
 <body>
 
 	<div class="main-wrap">
 		<div class="button-wrap">
 			<button id="note-button">New Note</button>
+			<button id="clear-button">Clear All</button>
 		</div>
 		
 		<div id="card-wrap" class="card-wrap">
